# lightflow-std

./: .gitignore  Cargo.toml  README.md
workflows/: README.md
workflows/std/control_if/: Cargo.toml
workflows/std/control_if/src/: lib.rs
workflows/std/control_merge/: Cargo.toml
workflows/std/control_merge/src/: lib.rs
workflows/std/control_split/: Cargo.toml
workflows/std/control_split/src/: lib.rs
workflows/std/control_switch/: Cargo.toml
workflows/std/control_switch/src/: lib.rs
workflows/std/image_crop/: Cargo.toml
workflows/std/image_crop/src/: lib.rs
workflows/std/image_edit/: Cargo.toml
workflows/std/image_edit/src/: lib.rs
workflows/std/image_inpaint/: Cargo.toml
workflows/std/image_inpaint/src/: lib.rs
workflows/std/image_invert/: Cargo.toml
workflows/std/image_invert/.agent/skills/lightflow-image-invert/: SKILL.md
workflows/std/image_invert/src/: lib.rs
workflows/std/image_load/: Cargo.toml
workflows/std/image_load/src/: lib.rs
workflows/std/image_resize/: Cargo.toml
workflows/std/image_resize/src/: lib.rs
workflows/std/image_save/: Cargo.toml
workflows/std/image_save/src/: lib.rs
workflows/std/image_upscale/: Cargo.toml
workflows/std/image_upscale/src/: lib.rs
workflows/std/json_extract/: Cargo.toml
workflows/std/json_extract/src/: lib.rs
workflows/std/llm_classify/: Cargo.toml
workflows/std/llm_classify/src/: lib.rs
workflows/std/llm_generate/: Cargo.toml
workflows/std/llm_generate/src/: lib.rs
workflows/std/llm_structured_output/: Cargo.toml
workflows/std/llm_structured_output/src/: lib.rs
workflows/std/mask_compose/: Cargo.toml
workflows/std/mask_compose/src/: lib.rs
workflows/std/model_lock_check/: Cargo.toml
workflows/std/model_select/: Cargo.toml
workflows/std/model_select/src/: lib.rs
workflows/std/std/: Cargo.toml
workflows/std/std/.agent/skills/lightflow-std/: SKILL.md
workflows/std/std/src/: lib.rs
workflows/std/text_concat/: Cargo.toml
workflows/std/text_plan/: Cargo.toml
workflows/std/text_plan/.agent/skills/lightflow-text-plan/: SKILL.md
workflows/std/text_plan/src/: lib.rs
workflows/std/text_prompt/: Cargo.toml
workflows/std/text_prompt/.agent/skills/lightflow-text-prompt/: SKILL.md
workflows/std/text_prompt/src/: lib.rs
workflows/std/text_regex/: Cargo.toml
workflows/std/text_result/: Cargo.toml
workflows/std/text_template/: Cargo.toml
workflows/std/text_to_image/: Cargo.toml
workflows/std/text_to_image/.agent/skills/lightflow-text-to-image/: SKILL.md
workflows/std/text_to_image/src/: lib.rs
(+27 files in other folders)
