[package]
name = "lightflow-image-invert"
version = "0.1.0"
edition = "2024"
description = "LightFlow standard workflow for inverting PNG image colors."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightjunction/lightflow-std"
keywords = ["lightflow", "workflow", "image"]
categories = ["development-tools"]

[dependencies]
lightflow = { workspace = true }
