[package]
name = "lightflow-text-plan"
version = "0.1.0"
edition = "2024"
description = "LightFlow standard composite text planning workflow."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightjunction/lightflow-std"
keywords = ["lightflow", "workflow", "text"]
categories = ["development-tools"]

[dependencies]
lightflow = { workspace = true }
