[package]
name = "lightflow-text-to-image"
version = "0.1.0"
edition = "2024"
description = "LightFlow standard workflow node."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lightjunction/lightflow-std"
keywords = ["lightflow", "workflow"]
categories = ["development-tools"]

[dependencies]
lightflow = { workspace = true }
